--- a/src/routes/studio/style.css
+++ b/src/routes/studio/style.css
@@ -44,12 +44,28 @@
     height: var(--page_max_height);
     position: relative;
     overflow: hidden;
-  }
+}
 
-  .canvas_holder {
+.canvas_holder {
     width: 10000px;
     height: 10000px;
     background-color: transparent;
     position: absolute;
     cursor: move;
-  }
+}
+
+.inner_canvas_buttons{
+    width: 300px;
+    height: 40px;
+    background-color: gainsboro;
+    position: absolute;
+    left: 200px;
+    top: 50px;
+}
+
+
+.ui_design_canvas{
+    width: 330px;
+    height: 900px;
+    background-color: green;
+}
