--- a/src/routes/studio/style.css
+++ b/src/routes/studio/style.css
@@ -25,10 +25,14 @@
 }
 
 .page_pane_selection_sidebar {
-    width: 60px;
+    width: 70px;
     height: var(--page_max_height);
-    background-color: white;
+    background-color: rgb(85, 79, 79);
     border-right: var(--visible_border);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
 }
 
 .page_attribute_sidebar {
@@ -40,7 +44,7 @@
 
 
 .page_canvas {
-    width: calc(100% - 60px - 280px);
+    width: calc(100% - 70px - 280px);
     height: var(--page_max_height);
     position: relative;
     overflow: hidden;
@@ -65,8 +69,6 @@
 
 
 .ui_design_canvas{
-
-    background-color: rebeccapurple;
     position: absolute;
     left: 200px;
     top: 120px;
