Create templates tab

--- a/src/lib/assets/css/studio/sidebar_ui_action_comps.css
+++ b/src/lib/assets/css/studio/sidebar_ui_action_comps.css
@@ -42,14 +42,15 @@
 .search_box {
     width: 100%;
     min-width: 230px;
-    border-radius: 10px;
-    height: 30px;
+    border-radius: 5px;
+    height: 35px;
     background-color: transparent;
-    border: 1px solid rgb(235, 235, 235);
+    border: 1px solid rgb(115, 115, 115);
     transition: 100ms;
     font-size: 14px;
     padding-left: 10px;
     margin-left: -10px;
+    color: black;
 }
 
 .search_box:focus {
