--- a/src/routes/home/home.css
+++ b/src/routes/home/home.css
@@ -14,24 +14,31 @@
  .home_navbar {
      width: 65%;
      display: flex;
-     justify-content: flex-end;
+     justify-content: space-between;
      padding-top: 20px;
      font-family: "Poppins", sans-serif;
  }
 
  .personal_acc_options_btn {
      width: 200px;
-     height: 40px;
+     height: 39px;
      font-size: 15px;
      float: right;
      cursor: pointer;
      background-color: transparent;
-     border: 1px solid rgb(148, 147, 147);
+     border: 1px solid rgb(235, 235, 235);
      border-radius: 6px;
      font-weight: 400;
      font-family: "Poppins",
          sans-serif;
-     color: rgb(43, 43, 43);
+     color: rgb(82, 82, 82);
+     margin-top: 10px;
+ }
+
+ .right_side_option_panes {
+     display: flex;
+     position: fixed;
+     right: 17%;
  }
 
  .button_inner_personal_acc_opts {
@@ -103,6 +110,29 @@
      background-color: transparent;
      margin-right: 20px;
      cursor: pointer;
+     margin-top: 10px;
+     margin-right: 30px;
+ }
+
+ .logo_wrapper {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     float: left;
+     position: fixed;
+ }
+
+ .logo_img {
+     width: 30px;
+     height: 30px;
+ }
+
+ .logo_name {
+     margin-left: 10px;
+     font-size: 17px;
+     font-weight: 500;
+     letter-spacing: 0.01rem;
+     color: rgb(75, 75, 75);
  }
 
  /****
@@ -111,9 +141,11 @@
 
  **/
  .app_view_section {
-     width: 65%;
+     width: 1150px;
      background-color: transparent;
      margin-top: 50px;
+     position: fixed;
+     top: 100px;
  }
 
  .app_view_body {
@@ -143,6 +175,12 @@
      margin-left: 20px;
  }
 
+ .app_view_header {
+     display: flex;
+     align-items: center;
+     justify-content: space-between;
+ }
+
  .create_new_app_card p {
      margin: 0;
      font-size: 15px;
@@ -157,28 +195,31 @@
 
  .app_view_cards_holder {
      width: 100%;
-    height: auto;
+     height: auto;
      display: flex;
      flex-wrap: wrap;
      margin-bottom: 100px;
+     margin-top: 50px;
  }
 
  .app_view_card {
-     width: 330px;
-     height: 250px;
+     width: 230px;
+     height: 190px;
      background-color: white;
      border-radius: 15px;
      box-shadow: 0px 0px 12px 0px rgba(232, 232, 232, 0.49);
      -webkit-box-shadow: 0px 0px 12px 0px rgba(232, 232, 232, 0.49);
      -moz-box-shadow: 0px 0px 12px 0px rgba(232, 232, 232, 0.49);
-     margin-top: 50px;
-     margin-left: 20px;
-     margin-right: 20px;
+     margin-top: 10px;
+     margin-right: 10px;
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
      cursor: pointer;
+     padding-left: 20px;
+     padding-right: 20px;
+     position: relative;
  }
 
  .app_view_card img {
@@ -189,9 +230,9 @@
  }
 
  .app_title_p {
-     margin-top: 5px;
      margin-left: 10px;
      margin-bottom: 0;
+     margin-top: -15px;
      font-size: 17px;
      font-weight: 600;
  }
@@ -199,8 +240,30 @@
  .app_last_edited {
      color: rgb(136, 133, 133);
      font-size: 13px;
-     margin: 0;
-     margin-top: 5px;
-     margin-bottom: 9px;
      font-family: "Inter", sans-serif;
+     position: absolute;
+     bottom: 10px;
  }
+
+ .app_new_button {
+     width: 230px;
+     height: 55px;
+     display: flex;
+     background-color: black;
+     border: 0;
+     border-radius: 7px;
+     color: white;
+     justify-content: center;
+     align-items: center;
+     font-size: 18px;
+     cursor: pointer;
+ }
+
+ .app_pricing_view_p{
+    position: absolute;
+    left: 20px;
+    top: 0px;
+    font-size: 13px;
+    color: gray;
+    text-transform: capitalize;
+}  
