--- a/src/css/home.css
+++ b/src/css/home.css
@@ -264,6 +264,13 @@
     left: 20px;
     top: 0px;
     font-size: 13px;
-    color: gray;
+    color: rgb(78, 77, 77);
     text-transform: capitalize;
+    background-color: rgb(206, 206, 206);
+    width: 50px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
 }  
