--- a/src/css/home.css
+++ b/src/css/home.css
@@ -11,130 +11,6 @@
      overflow: auto;
  }
 
- .home_navbar {
-     width: 65%;
-     display: flex;
-     justify-content: space-between;
-     padding-top: 20px;
-     font-family: "Poppins", sans-serif;
- }
-
- .personal_acc_options_btn {
-     width: 200px;
-     height: 39px;
-     font-size: 15px;
-     float: right;
-     cursor: pointer;
-     background-color: transparent;
-     border: 1px solid rgb(235, 235, 235);
-     border-radius: 6px;
-     font-weight: 400;
-     font-family: "Poppins",
-         sans-serif;
-     color: rgb(82, 82, 82);
-     margin-top: 10px;
- }
-
- .right_side_option_panes {
-     display: flex;
-     position: fixed;
-     right: 17%;
- }
-
- .button_inner_personal_acc_opts {
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     height: 40px;
-     margin-top: -2px;
- }
-
- .personal_profile_options_wrapper {
-     z-index: 80;
- }
-
- .personal_acc_options_holder {
-     width: 200px;
-     height: auto;
-     background-color: rgb(250, 250, 250);
-     box-shadow: 1px 3px 5px -2px rgba(194, 194, 194, 0.8);
-     -webkit-box-shadow: 1px 3px 5px -2px rgba(194, 194, 194, 0.8);
-     -moz-box-shadow: 1px 3px 5px -2px rgba(194, 194, 194, 0.8);
-     z-index: 100;
-     border-radius: 10px;
- }
-
- .option_group {
-     display: flex;
-     align-items: center;
-     justify-content: flex-start;
-     margin-top: 5px;
-     width: 190px;
-     height: 30px;
-     padding-left: 10px;
- }
-
- .option_group:hover {
-     cursor: pointer;
-     background-color: gray;
- }
-
- .logout_button {
-     width: auto;
-     height: auto;
-     font-size: 13px;
-     margin-left: -7px;
-     background-color: transparent;
-     border: 0;
-     margin-top: -5px;
-     font-family: "Poppins", sans-serif;
- }
-
- .acc_sett_button {
-     width: auto;
-     height: auto;
-     font-size: 13px;
-     margin-left: -7px;
-     background-color: transparent;
-     margin-top: 10px;
-     border: 0;
-     margin-top: -2px;
-     font-family: "Poppins", sans-serif;
- }
-
- .notification_page_view_btn {
-     width: 40px;
-     height: 40px;
-     font-size: 20px;
-     border: 0;
-     background-color: transparent;
-     margin-right: 20px;
-     cursor: pointer;
-     margin-top: 10px;
-     margin-right: 30px;
- }
-
- .logo_wrapper {
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     float: left;
-     position: fixed;
- }
-
- .logo_img {
-     width: 30px;
-     height: 30px;
- }
-
- .logo_name {
-     margin-left: 10px;
-     font-size: 17px;
-     font-weight: 500;
-     letter-spacing: 0.01rem;
-     color: rgb(75, 75, 75);
- }
-
  /****
 
         Project view section
@@ -205,13 +81,13 @@
  .app_view_card {
      width: 230px;
      height: 190px;
-     background-color: white;
+     background-color: transparent;
      border-radius: 15px;
      box-shadow: 0px 0px 12px 0px rgba(232, 232, 232, 0.49);
      -webkit-box-shadow: 0px 0px 12px 0px rgba(232, 232, 232, 0.49);
      -moz-box-shadow: 0px 0px 12px 0px rgba(232, 232, 232, 0.49);
      margin-top: 10px;
-     margin-right: 10px;
+     margin-right: 13px;
      display: flex;
      flex-direction: column;
      align-items: center;
@@ -220,6 +96,7 @@
      padding-left: 20px;
      padding-right: 20px;
      position: relative;
+     
  }
 
  .app_view_card img {
@@ -246,10 +123,10 @@
  }
 
  .app_new_button {
-     width: 230px;
-     height: 55px;
+     width: 210px;
+     height: 50px;
      display: flex;
-     background-color: black;
+     background-color: var(--violet-color);
      border: 0;
      border-radius: 7px;
      color: white;
@@ -264,9 +141,10 @@
     left: 20px;
     top: 0px;
     font-size: 13px;
-    color: rgb(78, 77, 77);
+    /* color: rgb(78, 77, 77); */
+    color: white;
     text-transform: capitalize;
-    background-color: rgb(206, 206, 206);
+    background-color: rgb(147, 124, 231);
     width: 50px;
     height: 20px;
     display: flex;
